--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
     <!-- <script src='http://localhost:3003/bundle.js'></script> -->
     <script src='https://s3-us-west-1.amazonaws.com/warp-v-bundle/bundle.js'></script>
     <!-- <script src='http://localhost:3004/bundle.js'></script> -->
-    <script src='https://s3.us-east-2.amazonaws.com/fec-bundle/bundle.js'></script>
-    <!-- <script src='http://localhost:3005/bundle.js'></script> -->
-    <script src='https://s3.amazonaws.com/warp-v-vb-bundles/mpg_bundle.js'></script>
-    <!-- <script src='http://localhost:3006/bundle.js'></script> -->
+<!--     <script src='https://s3.us-east-2.amazonaws.com/fec-bundle/bundle.js'></script>
+ -->    <script src='http://localhost:3005/mpg_bundle.js'></script>
+<!--     <script src='https://s3.amazonaws.com/warp-v-vb-bundles/mpg_bundle.js'></script>
+ -->    <!-- <script src='http://localhost:3006/bundle.js'></script> -->
     <script src='https://s3.amazonaws.com/warp-v-vb-bundles/n&c_bundle.js'></script>
     <!-- <script src='http://localhost:3007/bundle.js'></script> -->
     <script src='https://s3.amazonaws.com/warp-v/footer/bundle.js'></script>
