--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <script src='/lib/react.development.js'></script>
     <script src='/lib/react-dom.development.js'></script>
     <!-- <script src='http://localhost:3001/bundle.js'></script> -->
-    <script src='https://s3.amazonaws.com/warp-v/carousel/bundle.js'></script>
+    <script src='https://s3-us-west-1.amazonaws.com/vb-sdc-shoe-photo-bucket/spc_bundle.js'></script>
     <!-- <script src='http://localhost:3002/bundle.js'></script> -->
     <script src='https://s3-us-west-2.amazonaws.com/warpsearch/warp-v/bundle.js'></script>
     <!-- <script src='http://localhost:3003/bundle.js'></script> -->
@@ -32,7 +32,7 @@
  -->    <script src='http://localhost:3005/mpg_bundle.js'></script>
 <!--     <script src='https://s3.amazonaws.com/warp-v-vb-bundles/mpg_bundle.js'></script>
  -->    <!-- <script src='http://localhost:3006/bundle.js'></script> -->
-    <script src='https://s3.amazonaws.com/warp-v-vb-bundles/n&c_bundle.js'></script>
+    <script src='https://s3.amazonaws.com/nvodoor-csvs/n&c_bundle.js'></script>
     <!-- <script src='http://localhost:3007/bundle.js'></script> -->
     <script src='https://s3.amazonaws.com/warp-v/footer/bundle.js'></script>
   </body>
