--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
     <!-- <script src='http://localhost:3003/bundle.js'></script> -->
     <script src='https://s3-us-west-1.amazonaws.com/warp-v-bundle/bundle.js'></script>
     <!-- <script src='http://localhost:3004/bundle.js'></script> -->
+    <script src='http://ec2-54-241-129-105.us-west-1.compute.amazonaws.com:3004/bundle.js'></script>
 <!--     <script src='https://s3.us-east-2.amazonaws.com/fec-bundle/bundle.js'></script>
- -->    <script src='http://localhost:3005/mpg_bundle.js'></script>
+ -->    <script src='http://ec2-54-219-162-194.us-west-1.compute.amazonaws.com:3005/mpg_bundle.js'></script>
 <!--     <script src='https://s3.amazonaws.com/warp-v-vb-bundles/mpg_bundle.js'></script>
  -->    <!-- <script src='http://localhost:3006/bundle.js'></script> -->
     <script src='https://s3.amazonaws.com/nvodoor-csvs/n&c_bundle.js'></script>
